--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "earth",
+  "homepage": "https://kuzz0k.github.io/GeoCoder/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "axios": "^1.7.9",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
